--- a/telecomms/web/templates/navbar.html
+++ b/telecomms/web/templates/navbar.html
@@ -1,19 +1,15 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{{url_for('index')}}">Tele</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{{ url_for('db')}}">Database</a>
+            <a class="nav-link" href="{{url_for('view_vm_list')}}">List</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{{url_for('one')}}">OpenNebula</a>
+            <a class="nav-link" aria-current="page" href="{{url_for('create')}}">Create VMs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.cgates.lt/">cgates</a>
+            <a class="nav-link" aria-current="page" href="{{ url_for('logout')}}">Logout</a>
           </li>
         </ul>
       </div>
