Tweak for agreed DB structure. VM creation, correct displaying

--- a/telecomms/web/templates/vminfo.html
+++ b/telecomms/web/templates/vminfo.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
-{% block title %}Login{% endblock %}
+{% block title %}VM INFORMATION{% endblock %}
+{% block content %}<p>HI, I'M VM INSTANCE</p>{% endblock %}
     
-{% endblock %}
